test/e2e/fixtures/tcpmapping-cross-namespace/manifests.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tcpmapping-cross-namespace-other
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: target
  namespace: tcpmapping-cross-namespace-other
spec:
  replicas: 1
  selector:
    matchLabels:
      app: target
  template:
    metadata:
      labels:
        app: target
    spec:
      containers:
        - name: kat-server
          image: (env('KAT_SERVER_IMAGE'))
          imagePullPolicy: IfNotPresent
          command: ["/work/kat-server"]
          env:
            - name: BACKEND
              value: target
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: target
  namespace: tcpmapping-cross-namespace-other
spec:
  selector:
    app: target
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: getambassador.io/v3alpha1
kind: Listener
metadata:
  name: tcp-listener
spec:
  ambassador_id: [(env('SLOT'))]
  port: 6789
  protocol: TCP
  securityModel: INSECURE
  hostBinding:
    namespace:
      from: ALL
---
apiVersion: getambassador.io/v3alpha1
kind: TCPMapping
metadata:
  name: target
spec:
  ambassador_id: [(env('SLOT'))]
  port: 6789
  service: target.tcpmapping-cross-namespace-other:8080
